<resources>
    <string name="app_name">Billionaire</string>
    <string name="title_activity_maps">Map</string>
    <string name="players">PLAYERS</string>
    <string name="money">MONEY</string>
    <string name="map">MAP</string>
    <string name="transportation">TRANSPORTATION</string>
    <string name="go">GO</string>
    <string name="currency">CAD</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <integer name="players">2</integer>

    <string-array name="transportations">
        <item>Walking</item>
        <item>Bycicle</item>
        <item>Skytrain</item>
    </string-array>

    <string-array name="maps">
        <item>Please select a map</item>
        <item>Canada Line(Vancouver, Canada)</item>
        <item>Wenhu Line(Taipei, Taiwan)</item>
    </string-array>
    <string-array name="mode">
        <item>Single Player</item>
        <item>Multi Players</item>
    </string-array>

    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="dice">DICE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_game_guest">GameGuestActivity</string>
    <string name="nickname">Nickname</string>
    <string name="invitecode">InviteCode</string>
    <string name="play_mode">Play Mode</string>
    <string name="host_name">Host name</string>
    <string name="invite_code">Invite code</string>
    <string name="inviting_line">Let\'s play billionaire</string>
</resources>
